fix: Set flex-wrap for Responsive-web

--- a/style.scss
+++ b/style.scss
@@ -188,6 +188,8 @@ nav {
       }
     }
     .buttons {
+      display: flex;
+      flex-wrap: wrap;
       padding: 8px 0 8px 10px;
       a {
         text-decoration: none;
@@ -254,6 +256,7 @@ nav {
         background-color: #59cf92;
       }
       .left-container {
+        width: 320px;
         display: flex;
         flex-wrap: wrap;
         align-content: center;
@@ -261,12 +264,14 @@ nav {
         margin-bottom: 8px;
         margin-left: 160px;
         h1 {
+          width: 320px;
           text-align: start;
           font-size: 32px;
           font-weight: 700;
           line-height: 1.5;
         }
         p {
+          width: 320px;
           text-align: start;
           font-size: 16px;
           line-height: 1.6;
@@ -323,11 +328,11 @@ nav {
     .swiper-pagination {
       position: static;
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: center;
       .swiper-pagination-bullet {
         padding: 0 16px;
-        // width: 80px;
         width: auto;
         height: 36px;
         margin-left: 16px;
